# SpaceshipBattle

./: CMakeLists.txt  README.md
inc/: Asteroid.hpp  Bomb.hpp  Enemy.hpp  Game.hpp  Object.hpp  Spaceship.hpp  TextureHolder.hpp  UFO.hpp  Vector2f.hpp  functions.hpp  globalConstsAndVars.hpp
src/: Asteroid.cpp  Bomb.cpp  Enemy.cpp  Game.cpp  Object.cpp  Spaceship.cpp  TextureHolder.cpp  UFO.cpp  Vector2f.cpp  functions.cpp  main.cpp
